# clawcode

./: .clawcode.json  README.zh.md  pyproject.toml
clawcode/acp_shim/: __init__.py  __main__.py  agent.py
clawcode/config/: settings.py
clawcode/llm/: agent.py
clawcode/llm/providers/: openrouter.py
clawcode/llm/tools/: __init__.py  advanced.py  execute_code.py  file_guard.py  file_ops.py
docs/: acp-shim.md
tests/: test_duplicate_write_guard.py  test_hardening_guards.py  test_shim_bash_permissions.py
tools/: acp_test_client.py  sync_claude_skills.py
tools/brain_mcp/: server.py
